# stock_crew

./: .env.example  .gitignore  README.md  pyproject.toml
src/stock/: crew.py  main.py  main1.py_bak
src/stock/config/: agents.yaml  tasks.yaml
src/stock/tools/: stock_analysis_tool.py
