[tool.poetry]
name = "stock-crew"
version = "0.1.0"
description = "Crew AI multi agent system example"
authors = ["june <skidrow6122@gmail.com>"]
readme = "README.md"
packages = [
    { include = "stock", from = "src" },
]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.2.6"
pandas = "^2.2.3"
crewai = {extras = ["tools"], version ="^0.121.1"}
yfinance = "^0.2.61"
langchain-anthropic = "^0.3.15"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
